do
  local base_path = os.getenv("PWD")
  local command = debug.getinfo(1, "S").source:sub(2)
  local last_idx = pl_stringx.rfind(command, "/")
  if last_idx then
    base_path = pl_path.join(base_path, string.sub(command, 1, last_idx - 1))
  end
  CHANGELOG_PATH = base_path
end
local UNRELEASED = "unreleased"
local REPOS = {
  kong = "Kong/kong",
}
local JIRA_BASE_URL = "https://konghq.atlassian.net/browse/"
local GITHUB_REFERENCE = {
  pr = "https://github.com/%s/pull/%d",
  issue = "https://github.com/%s/issues/%d"
}
local SCOPE_PRIORITY = { -- smallest on top
  Performance = 10,
  Configuration = 20,
  Core = 30,
  PDK = 40,
  Plugin = 50,
  ["Admin API"] = 60,
  Clustering = 70,
  Default = 100, -- default priority
}

setmetatable(SCOPE_PRIORITY, {
  __index = function()
    return rawget(SCOPE_PRIORITY, "Default") - 1
  end
})

local function table_keys(t)
  if type(t) ~= "table" then
    return t
  end
  local keys = {}
  for k, _ in pairs(t) do
    table.insert(keys, k)
  end
  return keys
end

local function parse_github_ref(system, reference_type, references)
  if references == nil or references == lyaml.null then
    return nil
  end
  local parsed_references = {}
  for i, ref in ipairs(references or {}) do
    local repo = REPOS[system]
    local ref_no = tonumber(ref) -- treat ref as number string first
    local name = "#" .. ref
    if not ref_no then -- ref is not a number string
      local parts = pl_stringx.split(ref, ":")
      repo = parts[1]
      ref_no = parts[2]
      name = pl_stringx.replace(tostring(ref), ":", " #")
    end
    parsed_references[i] = {
      id = ref_no,
      name = name,
      link = string.format(GITHUB_REFERENCE[reference_type], repo, ref_no),
    }
  end
  return parsed_references
end


local function parse_jiras(jiras)
  local jira_items = {}
  for i, jira in ipairs(jiras or {}) do
    jiras[i] = {
      id = jira,
      link = JIRA_BASE_URL .. jira
    }
  end
  return jira_items
end

